--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/WGZAI.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/WGZAI.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>wealth-zone-ai</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: https:; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:;">
+    <title>Wealth Zone Group AI</title>
   </head>
   <body>
     <div id="root"></div>
